# routes/accMobile.js
@@ -122,7 +122,7 @@ router.post('/updateIncident',
     async function (req, res) {
         const valid = (checkToken(req.token))
         if (valid == true) {
-            await fetch("https://cityofpittsburgh.sharepoint.com/sites/PublicSafety/ACC/_api/web/lists/GetByTitle('Incidents')/items", {
+            await fetch("https://cityofpittsburgh.sharepoint.com/sites/PublicSafety/ACC/_api/web/lists/GetByTitle('Incidents')/items("+ req.body.itemId +")", {
                     method: 'POST',
                     headers: new Headers({
                         'Authorization': 'Bearer ' + await refreshToken(),
@@ -160,6 +160,81 @@ router.get('/selectAnimals',
                     res.status(200).send(dt(data, models.animals).transform())
                 })
                 .catch(err => res.status(500).send(err))
+        } else res.status(403).end()
+    }
+)
+
+// create a new animal record
+router.post('/addAnimal',
+    async function (req, res) {
+        const valid = (checkToken(req.token))
+        if (valid == true) {
+            await fetch("https://cityofpittsburgh.sharepoint.com/sites/PublicSafety/ACC/_api/web/lists/GetByTitle('Animals')/items", {
+                    method: 'POST',
+                    headers: new Headers({
+                        'Authorization': 'Bearer ' + await refreshToken(),
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json',
+                    }),
+                    body: JSON.stringify(req.body)
+                })
+                .then(res => res.json())
+                .then(data => {
+                    res.status(200).send()
+                })
+                .catch(error => res.status(500).send(error))
+        } else res.status(403).end()
+    }
+)
+
+// update an existing animal record
+router.post('/updateAnimal',
+    async function (req, res) {
+        const valid = (checkToken(req.token))
+        if (valid == true) {
+            await fetch("https://cityofpittsburgh.sharepoint.com/sites/PublicSafety/ACC/_api/web/lists/GetByTitle('Animals')/items("+ req.body.itemId +")", {
+                    method: 'POST',
+                    headers: new Headers({
+                        'Authorization': 'Bearer ' + await refreshToken(),
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json',
+                        'X-RequestDigest': 'form digest value',
+                        'X-HTTP-Method': 'MERGE',
+                        'IF-MATCH': '*'
+                    }),
+                    body: JSON.stringify(req.body)
+                })
+                .then(res => res.json())
+                .then(data => {
+                    res.status(200).send()
+                })
+                .catch(error => res.status(500).send(error))
+        } else res.status(403).end()
+    }
+)
+
+// delete an existing animal record
+router.post('/deleteAnimal',
+    async function (req, res) {
+        const valid = (checkToken(req.token))
+        if (valid == true) {
+            await fetch("https://cityofpittsburgh.sharepoint.com/sites/PublicSafety/ACC/_api/web/lists/GetByTitle('Animals')/items("+ req.query.itemId +")", {
+                    method: 'POST',
+                    headers: new Headers({
+                        'Authorization': 'Bearer ' + await refreshToken(),
+                        'Accept': 'application/json',
+                        'Content-Type': 'application/json',
+                        'X-RequestDigest': 'form digest value',
+                        'X-HTTP-Method': 'DELETE',
+                        'IF-MATCH': '*'
+                    }),
+                    body: JSON.stringify(req.body)
+                })
+                .then(res => res.json())
+                .then(data => {
+                    res.status(200).send()
+                })
+                .catch(error => res.status(500).send(error))
         } else res.status(403).end()
     }
 )
